--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "framer-motion": "^10.16.5",
+    "i18next": "^23.7.10",
+    "i18next-resources-for-ts": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.5.0",
     "react-router-dom": "^6.19.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
@@ -29,7 +32,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "i18next-resources-for-ts": "i18next-resources-for-ts toc -i ./src/i18n/en -o ./src/@types/resources.ts"
   },
   "eslintConfig": {
     "extends": [
