--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^16.18.61",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
+    "axios": "^1.6.3",
     "framer-motion": "^10.16.5",
     "i18next": "^23.7.10",
     "i18next-resources-for-ts": "^1.4.0",
