--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mui/lab": "^5.0.0-alpha.163",
     "@mui/material": "^5.15.7",
     "@mui/styled-engine-sc": "^6.0.0-alpha.6",
+    "@mui/x-charts": "^6.19.5",
     "@reduxjs/toolkit": "^2.0.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -29,6 +30,7 @@
     "react-router-dom": "^6.19.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "recharts": "^2.12.2",
     "redux-persist": "^6.0.0",
     "styled-components": "^6.1.1",
     "typescript": "^4.9.5",
