--- a/.env
+++ b/.env
@@ -3,3 +3,13 @@ REACT_APP_HOST_REACT=http://localhost:8000
 
  
         
+
+         
+
+
+       <FirstCardSeller activeSize={activeSize} setActiveSize={setActiveSize} indexs={indexs} setIndexs={setIndexs} product={product} /> 
+     <Divider sx={{my:2}} />
+     <DescriptionSeller product={product} />
+
+
+      <ImageCardSeller activeSize={activeSize} setActiveSize={setActiveSize} indexs={indexs} setIndexs={setIndexs} product={product} />
