--- a/.env
+++ b/.env
@@ -1,15 +1,10 @@
 REACT_APP_HOST_REACT=http://localhost:8000
 
-
+CHARGILY_SECRET_KEY=test_sk_sIOQMvRWhoLWaLYI1DhyDIHkIelwO7ciUxInXmCS
  
         
+PAYPAL_CLIENT_ID=ARj9wu3zlNZXpnvzOl4h7q5iCRjQPKNJVRUKfvT59q8uuj8D4OWMANdZu-TifZzW88_2X1fD99XJZu3T
 
+PAYPAL_TOKEN=EEbftGjrW-3pH1CXTy9U0bluqbUBW_tI59XU7QAMGDoXy32vFmpOyyzqa2XGzh69ZlwN_1QZzOcJCLlW
          
 
-
-       <FirstCardSeller activeSize={activeSize} setActiveSize={setActiveSize} indexs={indexs} setIndexs={setIndexs} product={product} /> 
-     <Divider sx={{my:2}} />
-     <DescriptionSeller product={product} />
-
-
-      <ImageCardSeller activeSize={activeSize} setActiveSize={setActiveSize} indexs={indexs} setIndexs={setIndexs} product={product} />
