--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mui/material": "^5.15.7",
     "@mui/styled-engine-sc": "^6.0.0-alpha.6",
     "@mui/x-charts": "^6.19.5",
+    "@paypal/react-paypal-js": "^8.2.0",
     "@reduxjs/toolkit": "^2.0.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
