--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mui/x-charts": "^6.19.5",
     "@paypal/react-paypal-js": "^8.2.0",
     "@reduxjs/toolkit": "^2.0.1",
+    "@tanstack/react-query": "^5.29.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
