--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "i18next": "^23.7.10",
     "i18next-resources-for-ts": "^1.4.0",
     "js-cookie": "^3.0.5",
+    "mdi-material-ui": "^7.9.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.5.0",
