--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@mdi/js": "^7.4.47",
+    "@mdi/light-js": "^0.2.63",
+    "@mdi/react": "^1.6.1",
     "@mui/icons-material": "^5.14.18",
     "@mui/lab": "^5.0.0-alpha.163",
     "@mui/material": "^5.15.7",
@@ -20,6 +23,8 @@
     "@types/node": "^16.18.61",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
+    "apexcharts": "^3.49.0",
+    "apexcharts-clevision": "^3.28.5",
     "axios": "^1.6.3",
     "framer-motion": "^10.16.5",
     "i18next": "^23.7.10",
@@ -27,6 +32,7 @@
     "js-cookie": "^3.0.5",
     "mdi-material-ui": "^7.9.1",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.5.0",
     "react-redux": "^9.0.4",
