--- a/package.json
+++ b/package.json
@@ -3,16 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@mdi/js": "^7.4.47",
     "@mdi/light-js": "^0.2.63",
     "@mdi/react": "^1.6.1",
     "@mui/icons-material": "^5.14.18",
     "@mui/lab": "^5.0.0-alpha.163",
-    "@mui/material": "^5.15.7",
+    "@mui/material": "^5.15.19",
     "@mui/styled-engine-sc": "^6.0.0-alpha.6",
     "@mui/x-charts": "^6.19.5",
+    "@mui/x-data-grid": "^7.6.1",
     "@paypal/react-paypal-js": "^8.2.0",
     "@reduxjs/toolkit": "^2.0.1",
     "@tanstack/react-query": "^5.29.0",
@@ -41,7 +42,7 @@
     "react-slick": "^0.29.0",
     "recharts": "^2.12.2",
     "redux-persist": "^6.0.0",
-    "styled-components": "^6.1.1",
+    "styled-components": "^6.1.11",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
